# Metal-Blackhole

./: .gitignore  CMakeLists.txt  README.md  RENDERING_INVARIANTS.md
include/: Camera.h  ShaderCommon.h
scripts/: build_metallib.sh
shaders/: geodesic.metal
src/: main.mm
tests/: validate_physics.py
